Style fixes including horizontal scrolling

--- a/src/_includes/components/nav/nav.css
+++ b/src/_includes/components/nav/nav.css
@@ -24,12 +24,10 @@ nav a {
 }
 
 .nav-home {
-  width: 3rem;
-  height: 3rem;
-  flex-grow: 1;
-  font-size: 16px;
+  font-size: 20px;
   font-family: var(--font-heading);
   display: inline-flex;
+  align-items: center;
 }
 
 .nav-home > a {
