--- a/src/_includes/styles/index.css
+++ b/src/_includes/styles/index.css
@@ -15,17 +15,12 @@
   --text-focus: hsla(330, 100%, 88%, 1);
 }
 
-html {
-  width: 100vw;
-}
-
 body {
   background: var(--primary-dark);
   font-family: var(--font-sans);
   color: var(--gray-300);
   font-size: 18px;
   min-height: 100vh;
-  width: 100vw;
   box-sizing: border-box;
   margin: 0;
 }
